feat: add method to UserController
